syntax = "proto3";

package notification;

service NotificationService {
  rpc FollowCreated (FollowCreatedRequest) returns (NotificationResponse);
}

message FollowCreatedRequest {
  string actorId = 1;           // id de la mascota que siguió
  string recipeId = 2;          // id de la mascota seguida
  string responsibleId = 3;     // dueño de la mascota seguida
  string type = 4;              // "Follower"
  string content = 5;           // texto de la notificación
  string timestamp = 6;         // en formato ISO8601
}

message NotificationResponse {
  string message = 1;
}
